--- a/building-a-regularity-classifier.tex
+++ b/building-a-regularity-classifier.tex
@@ -37,11 +37,11 @@ The cross-validation vector~$\Bm E$ wouldn't be of much practical utility if the
 \label[rippatheo]
 \preskip
 \theorem
-Let $X=\{\range x_N/\}\subset\Omega\subseteq\R^d$ be a set of data sites, $\phi:[0,\infty)\to\R$ a radial function which is positive definite on~$\R^d$, and
+Let $X=\{\range x_N/\}\subset\Omega\subseteq\R^d\!\.$ be a set of data sites, $\phi:[0,\infty)\to\R$ a radial function which is positive definite on~$\R^d\!\!$,\, and
 $$
 \Bm f\coloneq (\range f_N/)^T = (f(x_1), f(x_2),\dots f(x_N))^T
 $$
-a vector of values sampled from any unknown function~$f\in\R^\Omega$.
+a vector of values sampled from any unknown function~$f\in\R^\Omega\!\!\!$.\,
 Then the elements~$E_k=f_k-s^{(k)\!}(x_k)$ of the cross-validation vector~$\Bm E$ can be computed as
 $$
 E_k = {α_k\over C_{k,k}},
@@ -164,7 +164,7 @@ This ratio of course has no meaning when~$\norm s_\phi = 0$.  But in this case i
 \label[Qdef]
 \preskip
 \definition
-Given a set~$X = \{\range x_N/\}\subset\Omega\subseteq\R^d$ of data sites, with $N ≥ 2$, a set $F = \{\range f_N/\}$ of function values, and a radial function~$\phi$ which is positive definite on~$\R^d$, we define the {\em $\phi$-regularity vector}
+Given a set~$X = \{\range x_N/\}\subset\Omega\subseteq\R^d\!$ of data sites, with $N ≥ 2$, a set $F = \{\range f_N/\}$ of function values, and a radial function~$\phi$ which is positive definite on~$\R^d\!\!$,\, we define the {\em $\phi$-regularity vector}
 $$
 \Bm Q\coloneq (\range Q_N/)
 $$
