--- a/thesis.tex
+++ b/thesis.tex
@@ -93,8 +93,8 @@
 \sec Invariance properties
 \input invariance-properties
 
-\sec[numericalsec] Numerical examples
-\input numerical-examples
+\sec[numericalsec] Numerical observations
+\input numerical-observations
 
 \chap Discontinuities detection\nl ^^J
       and reconstruction
