--- a/domain-segmentation.tex
+++ b/domain-segmentation.tex
@@ -2,7 +2,7 @@
 
 In this section we present the first phase of a two-phase algorithm that aims to recover discontinuous functions from scattered data; the second phase will be disclosed in the following section.  This algorithm is mainly intended to demonstrate the applicability of the regularity classifier described in Chapter~\ref[classificationchap], and must not be viewed as a definitive solution to the problem. Anyhow, it seems to produce satisfactory results. The proposed method greatly takes inspiration from the kernel-based adaptive approximation algorithm outlined by Lenarduzzi and Shaback~\cite[lenarduzzi-shaback_2017] (henceforth simply referred to as L-S). We restrict our attention to the bidimensional case---even if the algorithm allows for a generalisation in arbitrary dimension---because in higher dimensions the required computational cost quickly becomes prohibitive.
 
-The setting of the problem here is similar to that of L-S. Assume that a set~$X=\{\range x_N/\}\subset\Omega\subseteq ℝ^2$ of scattered data sites is given together with an associated set~$F=\{\range f_N/\}$ of function values, sampled from an unknown function~$f$.  Assume to know  that $f$ is continuous on certain non-overlapping subdomains~$\Omega_j\subseteq\Omega$, but not globally.  The goal is to recover the function~$f$ on the whole domain~$\smash{\Omega=\bigcup_{j=1}^M\Omega_j}$, starting from its sampled data~$(X, F)$. There will be no a priori assumptions on the form and placement of the singularities.
+The setting of the problem here is similar to that of L-S. Assume that a set~$X=\{\range x_N/\}\subset\Omega\subseteq ℝ^2\!$ of scattered data sites is given together with an associated set~$F=\{\range f_N/\}$ of function values, sampled from an unknown function~$f$.  Assume to know  that $f$ is continuous on certain non-overlapping subdomains~$\Omega_j\subseteq\Omega$, but not globally.  The goal is to recover the function~$f$ on the whole domain~$\smash{\Omega=\bigcup_{j=1}^M\Omega_j}$, starting from its sampled data~$(X, F)$. There will be no a priori assumptions on the form and placement of the singularities.
 
 
 
@@ -79,7 +79,7 @@ The decision to either enter the loop or terminate it depends on the content of~
 \cskip
 \vskip-0.9em
 \caption/f
-This picture visualises a portion of a set~$X\subset\Omega$ of data sites with its triangulation, where~$\Omega=[0,1]\times[0,1]\subset\R^2$. The sampled function~$f$ is discontinuous, and the black dashed line represents its discontinuity curve that separates~$\Omega$ into two subdomains.  Here we are at a general point of the algorithm, where the green, yellow, and red triangles are respectively the set $\Cal I_j$, $\Cal B_j$, and~$\Cal D_j$.  The blue triangle is the triangle~$\smash{t'\in\Cal B_j}$ that is currently being analysed.  The red circle, centred at the circumcentre~$\smash{c'}$ (the red cross) of~$t'$, encloses the set of the~$n$ nearest points to~$\smash{c'}$ taken from~$X$ (in this example $n = 100$).
+This picture visualises a portion of a set~$X\subset\Omega$ of data sites with its triangulation, where~$\Omega=[0,1]\times[0,1]\subset\R^2\!\!$.\, The sampled function~$f$ is discontinuous, and the black dashed line represents its discontinuity curve that separates~$\Omega$ into two subdomains.  Here we are at a general point of the algorithm, where the green, yellow, and red triangles are respectively the set $\Cal I_j$, $\Cal B_j$, and~$\Cal D_j$.  The blue triangle is the triangle~$\smash{t'\in\Cal B_j}$ that is currently being analysed.  The red circle, centred at the circumcentre~$\smash{c'}$ (the red cross) of~$t'$, encloses the set of the~$n$ nearest points to~$\smash{c'}$ taken from~$X$ (in this example $n = 100$).
 The small black circles are the points of~$X_{c'}$ that must not be removed from it---this is the set that we called~$Z$.  Notice that $Z$ need not be equal to the intersection of~$X_{c'}$ with the vertices of the green triangles.
   The small red circle is the point~$p\in X_{c'}\setminus Z$ that has the maximum value in the associated entry of the vector~$\Bm Q_{c'}$;  the blue dashed line delimits the open half plane~$\Pi$ that does not contain~$\smash{c'}$.
   In this case, after when the points of~$(X_{c'}\cap \Pi)\setminus Z$ are removed from~$X_{c'}$, the new set~$X_{c'}$ is fully contained in~$\Omega_j$, so the classifier~$\Cal R(X_{c'}, F_{c'})$ hopefully evaluates to~$1$,  and the set of triangles~$\smash{T_{c'}^{\,\cal i}}$ is added to the set~$\Cal I_j$ of green triangles.  Moreover, also the set~$\Cal B_j$ of yellow triangles is updated to reflect the new border of~$\Cal I_j$.
